src/test/deca/context/invalid/classextend19.deca
class A {}


class B extends A{
    B m() {}
}

class C extends B {
    A m() {}
}
